# Aurum

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CODEBASE_FULL_EXPLANATION.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.anchor-build  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json  temp-id.json  tsconfig.json
programs/aurum-hybrid-pricing/: Cargo.toml  README.md
programs/aurum-hybrid-pricing/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
scripts/: deploy-anchor.sh  setup-anchor.sh  smoke-legacy.js  smoke-legacy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/burn/: page.tsx
src/app/create/: page.tsx
src/app/locker/: page.tsx
src/components/: BurnForm.tsx  ConnectWalletButton.tsx  CreateTokenForm.tsx  LockerForm.tsx  ReferralBox.tsx  WalletProvider.tsx
src/idl/: aurum_hybrid_pricing.json
src/lib/: anchor.ts  config.ts  pricing.ts  solana.ts
types/: anchor.d.ts
