[package]
name = "aurum-hybrid-pricing"
version = "0.1.0"
description = "Hybrid pricing system for AURUM Token Atelier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aurum_hybrid_pricing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Upgraded Anchor crates to align with newer Agave (Solana) SBF toolchain.
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

[dev-dependencies]
# Retain previous local test harness versions for now; consider bump after successful build.
solana-program-test = "1.17"
solana-sdk = "1.17"
